--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "pregenerate:md": "run-s build",
     "lint:sensitive": "ban",
     "prepare": "husky install",
-    "pretest:integration": "preview",
+    "pretest:integration:base": "preview",
     "lint:gherkin": "gherkin-lint",
     "test:integration": "run-s 'test:integration:base -- --profile noWip'",
     "test:integration:base": "NODE_OPTIONS=--enable-source-maps DEBUG=any cucumber-js test/integration --profile base",
@@ -85,6 +85,7 @@
     "@form8ion/config-file": "^1.0.0",
     "@form8ion/core": "^2.0.0",
     "@travi/cli-messages": "^1.0.5",
+    "deepmerge": "^4.2.2",
     "js-yaml": "^4.1.0"
   }
 }
