--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "access": "public"
   },
   "runkitExampleFilename": "./example.js",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.es.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.mjs",
+  "exports": {
+    "require": "./lib/index.js",
+    "import": "./lib/index.mjs"
+  },
   "sideEffects": false,
   "repository": "form8ion/eslint",
   "bugs": "https://github.com/form8ion/eslint/issues",
@@ -28,7 +32,7 @@
     "pregenerate:md": "run-s build",
     "lint:sensitive": "ban",
     "prepare": "husky install",
-    "pretest:integration:base": "preview",
+    "pretest:integration:base": "run-s prepack",
     "lint:gherkin": "gherkin-lint",
     "test:integration": "run-s 'test:integration:base -- --profile noWip'",
     "test:integration:base": "NODE_OPTIONS=--enable-source-maps DEBUG=any cucumber-js test/integration --profile base",
@@ -72,7 +76,6 @@
     "mock-fs": "5.1.2",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
-    "package-preview": "4.0.0",
     "remark-cli": "11.0.0",
     "remark-toc": "8.0.1",
     "remark-usage": "10.0.1",
