feat(node-version): defined the support node ranges
BREAKING CHANGE: supported node versions are now limited to v14 about v14.18 and above v16

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "opinionated scaffolder for managing the ESLint configuration for a project",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
+  "engines": {
+    "node": "^14.18 || >=16"
+  },
   "files": [
     "example.js",
     "lib/"
