--- a/package.json
+++ b/package.json
@@ -6,25 +6,18 @@
   "engines": {
     "node": "^16.14 || >=18"
   },
-  "files": [
-    "example.js",
-    "lib/"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org)",
+  "repository": "form8ion/eslint",
+  "bugs": "https://github.com/form8ion/eslint/issues",
+  "homepage": "https://npm.im/@form8ion/eslint",
   "runkitExampleFilename": "./example.js",
-  "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
   "exports": {
     "require": "./lib/index.js",
     "import": "./lib/index.mjs"
   },
+  "main": "./lib/index.js",
+  "module": "./lib/index.mjs",
   "sideEffects": false,
-  "repository": "form8ion/eslint",
-  "bugs": "https://github.com/form8ion/eslint/issues",
-  "homepage": "https://npm.im/@form8ion/eslint",
-  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org)",
   "scripts": {
     "test": "npm-run-all --print-label build --parallel lint:* --parallel test:*",
     "lint:lockfile": "lockfile-lint",
@@ -52,7 +45,23 @@
     "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null",
-    "lint:engines": "ls-engines"
+    "lint:engines": "ls-engines",
+    "lint:publish": "publint --strict"
+  },
+  "files": [
+    "example.js",
+    "lib/"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
+  "dependencies": {
+    "@form8ion/config-file": "^1.0.0",
+    "@form8ion/core": "^3.0.0",
+    "@travi/cli-messages": "^1.0.5",
+    "deepmerge": "^4.2.2",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@babel/register": "7.22.5",
@@ -77,6 +86,7 @@
     "mocha": "10.2.0",
     "mock-fs": "5.2.0",
     "npm-run-all": "4.1.5",
+    "publint": "0.1.16",
     "remark-cli": "11.0.0",
     "remark-toc": "8.0.1",
     "remark-usage": "10.0.1",
@@ -84,12 +94,5 @@
     "rollup": "3.26.3",
     "rollup-plugin-auto-external": "2.0.0",
     "sinon": "15.2.0"
-  },
-  "dependencies": {
-    "@form8ion/config-file": "^1.0.0",
-    "@form8ion/core": "^3.0.0",
-    "@travi/cli-messages": "^1.0.5",
-    "deepmerge": "^4.2.2",
-    "js-yaml": "^4.1.0"
   }
 }
