--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": "^18.19.0 || ^20.9.0 || >=22.11.0"
   },
+  "type": "commonjs",
   "author": "Matt Travi <npm@travi.org> (https://matt.travi.org)",
   "repository": "form8ion/eslint",
   "bugs": "https://github.com/form8ion/eslint/issues",
