ci(settings): switch from classic branch protection to rulesets

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -4,3 +4,18 @@ repository:
   description: opinionated scaffolder for managing the ESLint configuration for a project
   homepage: https://npm.im/@form8ion/eslint
   private: false
+branches:
+  - name: master
+    protection: null
+rulesets:
+  - name: prevent destruction of the default branch
+    target: branch
+    enforcement: active
+    conditions:
+      ref_name:
+        include:
+          - ~DEFAULT_BRANCH
+        exclude: []
+    rules:
+      - type: deletion
+      - type: non_fast_forward
