--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "opinionated scaffolder for managing the ESLint configuration for a project",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
+  "type": "commonjs",
   "engines": {
     "node": "^18.19.0 || ^20.9.0 || >=22.11.0"
   },
-  "type": "commonjs",
   "author": "Matt Travi <npm@travi.org> (https://matt.travi.org)",
   "repository": "form8ion/eslint",
   "bugs": "https://github.com/form8ion/eslint/issues",
@@ -44,7 +44,7 @@
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
     "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
-    "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
+    "test:unit:base": "DEBUG=any vitest run",
     "lint:peer": "npm ls >/dev/null",
     "lint:engines": "ls-engines",
     "lint:publish": "publint --strict"
@@ -72,7 +72,6 @@
     "@form8ion/commitlint-config": "2.0.4",
     "@form8ion/eslint-config": "7.0.12",
     "@form8ion/eslint-config-cucumber": "1.4.1",
-    "@form8ion/eslint-config-mocha": "3.0.6",
     "@form8ion/remark-lint-preset": "6.0.7",
     "@rollup/plugin-node-resolve": "16.0.0",
     "@travi/any": "3.1.2",
@@ -85,7 +84,6 @@
     "husky": "9.1.7",
     "lockfile-lint": "4.14.0",
     "ls-engines": "0.9.3",
-    "mocha": "11.1.0",
     "mock-fs": "5.5.0",
     "npm-run-all2": "7.0.2",
     "publint": "0.3.6",
@@ -95,6 +93,7 @@
     "rimraf": "6.0.1",
     "rollup": "4.34.8",
     "rollup-plugin-auto-external": "2.0.0",
-    "sinon": "19.0.2"
+    "vitest": "3.0.6",
+    "vitest-when": "0.6.0"
   }
 }
