--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "opinionated scaffolder for managing the ESLint configuration for a project",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": "^18.19.0 || ^20.9.0 || >=22.11.0"
   },
@@ -12,12 +12,8 @@
   "bugs": "https://github.com/form8ion/eslint/issues",
   "homepage": "https://npm.im/@form8ion/eslint",
   "runkitExampleFilename": "./example.js",
-  "exports": {
-    "require": "./lib/index.js",
-    "import": "./lib/index.mjs"
-  },
+  "exports": "./lib/index.js",
   "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
   "sideEffects": false,
   "scripts": {
     "test": "npm-run-all --print-label build --parallel lint:* --parallel test:*",
@@ -66,9 +62,7 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/register": "7.25.9",
     "@cucumber/cucumber": "11.2.0",
-    "@form8ion/babel-preset": "1.6.143",
     "@form8ion/commitlint-config": "2.0.4",
     "@form8ion/eslint-config": "7.0.12",
     "@form8ion/eslint-config-cucumber": "1.4.1",
